--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,8 @@
 {
 	"manifest_version": 1,
 	"id": "io.github.wwoods.JoplinPluginRemember",
-	"app_min_version": "1.7",
+  "platforms": ["desktop", "mobile"],
+	"app_min_version": "2.2.5",
 	"version": "1.0.7",
 	"name": "Remember",
 	"description": "Spaced repetition plugin",
